# cmake-micromamba

./: CMakeLists.txt  README.md  config.yaml  micromamba.cmake
src/: test.cpp
